src/main/java/com/example/citronix/web/errors/TooManyChampsException.java
package com.example.citronix.web.errors;

public class TooManyChampsException extends RuntimeException{
    public TooManyChampsException(String message) {
        super(message);
    }
}
